tests/Rules/Structure/Fixtures/invalid/button_empty_no_aria.html.twig
{# 1 errors #}
<html>
<body>
<button><span class="icon"></span></button>
</body>
</html>
